--- a/liuyanban.css
+++ b/liuyanban.css
@@ -28,7 +28,7 @@
     
     background-color: transparent;
     border-color: darkolivegreen;
-    font-size: xxx-large;
+    font-size:4vw;
 }
 .buttonone:hover{
     background-color: rgba(173, 223, 247, 0.945);
